--- a/masterlist.html
+++ b/masterlist.html
@@ -11,12 +11,12 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Charadex</title>
-    <meta property="title" content="Charadex" />
+    <title>ML | Graf-Palaka</title>
+    <meta property="title" content="ML | Graf-Palaka" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.charadex.com/" />
+    <meta property="url" content="https://graf-palaka.github.io/graf-palaka/masterlist.html" />
     <meta property="image" content="assets/meta.png" />
-    <meta name="description" content="A tool for organizing small ARPGs and species.">
+    <meta name="description" content="A masterlist and information hub for the Graf-Palaka closed species owned by rustbqr and clonked.">
 
     <!-- No AI scraping directives -->
     <meta name="robots" content="noai">
@@ -247,8 +247,8 @@
 
                             <!-- Item -->
                             <div class="d-flex justify-content-between mb-2">
-                                <b class="text-muted">Value</b>
-                                <span>$<span class="value"></span></span>
+                                <b class="text-muted">Base Worth</b>
+                                <span>$<span class="Base Worth"></span></span>
                             </div>
 
                             <!-- Item -->
