--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Charadex</title>
-    <meta property="title" content="Charadex" />
+   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+    <title>Graf-Palaka</title>
+    <meta property="title" content="Graf-Palaka" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.charadex.com/" />
+    <meta property="url" content="https://graf-palaka.github.io/graf-palaka/index.html" />
     <meta property="image" content="assets/meta.png" />
-    <meta name="description" content="A tool for organizing small ARPGs and species.">
-
+    <meta name="description" content="A masterlist and information hub for the Graf-Palaka closed species owned by rustbqr and clonked.">
     <!-- No AI scraping directives -->
     <meta name="robots" content="noai">
     <meta name="robots" content="noimageai">
@@ -78,7 +77,7 @@
                     <!-- Hero Image & Title
                     ------------------------------------------------------------- -->
                     <div class="hero-title mb-4" style="background-image: url();">
-                        <div class="m-auto">Charadex</div>
+                        <div class="m-auto">Graf-Palaka</div>
                     </div>
 
 
@@ -95,19 +94,19 @@
                     <div class="row no-gutters m-n1 mb-n2">
 
                         <div class="col-lg-4 p-1">
-                            <h5>About</h5>
+                            <h5>About Graf-Palaka</h5>
                             <div class="px-3">
-                                <a class="btn btn-primary d-block mb-1" href="world.html">World</a>
-                                <a class="btn btn-primary d-block mb-1" href="species.html">Species</a>
-                                <a class="btn btn-primary d-block mb-1" href="masterlist.html">Designs</a>
+                                <a class="btn btn-primary d-block mb-1" href="https://toyhou.se/~world/148833.graf-palaka/page/104703.the-archive" target="_blank">Lore</a>
+                                <a class="btn btn-primary d-block mb-1" href="traits.html">Traits</a>
+                                <a class="btn btn-primary d-block mb-1" href="masterlist.html">Masterlist</a>
                             </div>
                         </div>
 
                         <div class="col-lg-4 col-md-6 p-1">
-                            <h5>Community</h5>
+                            <h5>Resources</h5>
                             <div class="px-3">
-                                <a class="btn btn-primary d-block mb-1" href="#">Toyhou.se</a>
-                                <a class="btn btn-primary d-block mb-1" href="#">Discord</a>
+                                <a class="btn btn-primary d-block mb-1" href="items.html">Items</a>
+                                <a class="btn btn-primary d-block mb-1" href="inventories.html">Inventories</a>
                                 <a class="btn btn-primary d-block mb-1" href="prompts.html">Prompts</a>
                             </div>
                         </div>
@@ -115,7 +114,7 @@
                         <div class="col-lg-4 col-md-6 p-1">
                             <h5>Resources</h5>
                             <div class="px-3">
-                                <a class="btn btn-primary d-block mb-1" href="#">Help Desk</a>
+                                <a class="btn btn-primary d-block mb-1" href="staff.html">Staff</a>
                                 <a class="btn btn-primary d-block mb-1" href="faq.html">FAQ</a>
                                 <a class="btn btn-primary d-block mb-1" href="terms.html">TOS</a>
                             </div>
@@ -129,11 +128,9 @@
                     <hr class="mt-4">
                     <div class="text-center mb-md-n4 font-weight-bold">
 
-                        <a class="mx-3" href="#"><i class="fas fa-floppy-disk fa-fw mr-1"></i> Toyhou.se</a>
-                        <a class="mx-3" href="#"><i class="fab fa-discord fa-fw mr-1"></i> Discord</a>
-                        <a class="mx-3" href="#"><i class="fab fa-twitter fa-fw mr-1"></i> Twitter </a>
-                        <a class="mx-3" href="#"><i class="fab fa-tumblr fa-fw mr-1"></i> Tumblr</a>
-                        <a class="mx-3" href="#"><i class="fas fa-cloud fa-fw mr-1"></i> BSky</a>
+                        <a class="mx-3" href="https://toyhou.se/~world/148833.graf-palaka" target="_blank"><i class="fas fa-floppy-disk fa-fw mr-1"></i> Toyhou.se</a>
+                        <a class="mx-3" href=" https://discord.gg/cbPUnxrEPD" target="_blank"><i class="fab fa-discord fa-fw mr-1"></i> Discord</a>
+                  
 
                     </div>
                 </div>
