--- a/faq.html
+++ b/faq.html
@@ -11,12 +11,13 @@
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Charadex</title>
-    <meta property="title" content="Charadex" />
+    <title>FAQ | Graf-Palaka</title>
+    <meta property="title" content="FAQ | Graf-Palaka" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.charadex.com/" />
+    <meta property="url" content="https://graf-palaka.github.io/graf-palaka/faq.html" />
     <meta property="image" content="assets/meta.png" />
-    <meta name="description" content="A tool for organizing small ARPGs and species.">
+    <meta name="description" content="A masterlist and information hub for the Graf-Palaka closed species owned by rustbqr and clonked.">
+    
 
     <!-- No AI scraping directives -->
     <meta name="robots" content="noai">
