--- a/dex.html
+++ b/dex.html
@@ -14,7 +14,7 @@
     <title>ML | Graf-Palaka</title>
     <meta property="title" content="ML | Graf-Palaka" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://graf-palaka.github.io/graf-palaka/masterlist.html" />
+    <meta property="url" content="https://graf-palaka.github.io/graf-palaka/dex.html" />
     <meta property="image" content="assets/meta.png" />
     <meta name="description" content="A masterlist and information hub for the Graf-Palaka closed species owned by rustbqr and clonked.">
 
