--- a/staff.html
+++ b/staff.html
@@ -10,13 +10,14 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
-    <title>Charadex</title>
-    <meta property="title" content="Charadex" />
+     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+    <title>Staff | Graf-Palaka</title>
+    <meta property="title" content="Staff | Graf-Palaka" />
     <meta property="type" content="website" />
-    <meta property="url" content="https://www.charadex.com/" />
+    <meta property="url" content="https://graf-palaka.github.io/graf-palaka/staff.html" />
     <meta property="image" content="assets/meta.png" />
-    <meta name="description" content="A tool for organizing small ARPGs and species.">
+    <meta name="description" content="A masterlist and information hub for the Graf-Palaka closed species owned by rustbqr and clonked.">
+    
 
     <!-- No AI scraping directives -->
     <meta name="robots" content="noai">
