--- a/inventories.html
+++ b/inventories.html
@@ -190,7 +190,8 @@
                         <div class="d-none">
                             <div class="row no-gutters" id="log-entry">
                                 <div class="col-md-3"><span class="timestamp"></span></div>
-                                <div class="col-md-9"><span class="reason"></span></div>
+                                <div class="col-md-9"><span class="MYO Slot">MYO Slot</span></div>
+                                <div class="col-md-9"><span class="Traits">Traits</span></div>
                             </div>
                         </div>
                     </div>
