--- a/bestiary.html
+++ b/bestiary.html
@@ -10,7 +10,7 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
-     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+     <link rel="shortcut icon" type="image/png" href="assets/74880233_PK0UuKd4YmWIcsR.png" />
     <title>Bestiary | Graf-Palaka</title>
     <meta property="title" content="Bestiary | Graf-Palaka" />
     <meta property="type" content="website" />
