--- a/dex.html
+++ b/dex.html
@@ -10,7 +10,7 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="assets/74880233_PK0UuKd4YmWIcsR.png" />
     <title>ML | Graf-Palaka</title>
     <meta property="title" content="ML | Graf-Palaka" />
     <meta property="type" content="website" />
