--- a/items.html
+++ b/items.html
@@ -10,7 +10,7 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
-   <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+   <link rel="shortcut icon" type="image/png" href="assets/74880233_PK0UuKd4YmWIcsR.png" />
     <title>Items | Graf-Palaka</title>
     <meta property="title" content="Items | Graf-Palaka" />
     <meta property="type" content="website" />
