--- a/prompts.html
+++ b/prompts.html
@@ -10,7 +10,7 @@
     <!-- ----------------------------------------------------------------- -->
     <!-- About Your Site                                                   -->
     <!-- ----------------------------------------------------------------- -->
-      <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+      <link rel="shortcut icon" type="image/png" href="assets/74880233_PK0UuKd4YmWIcsR.png" />
     <title>Prompts | Graf-Palaka</title>
     <meta property="title" content="Prompts | Graf-Palaka" />
     <meta property="type" content="website" />
