--- a/dex.html
+++ b/dex.html
@@ -215,15 +215,11 @@
 
                             <!-- Item -->
                             <div class="d-flex justify-content-between mb-2">
-                                <b class="text-muted">Artist</b>
-                                <span class="artist"></span>
+                                <b class="text-muted">Artist/Designer</b>
+                                <span class="artist/designer"></span>
                             </div>
 
-                            <!-- Item -->
-                            <div class="d-flex justify-content-between mb-2">
-                                <b class="text-muted">Designer</b>
-                                <span class="designer"></span>
-                            </div>
+                          
 
                             <hr>
 
@@ -233,11 +229,7 @@
                                 <span class="species"></span>
                             </div>
 
-                            <!-- Item -->
-                            <div class="d-flex justify-content-between mb-2">
-                                <b class="text-muted">Rarity</b>
-                                <span class="rarity"></span>
-                            </div>
+                          
 
                             <!-- Item -->
                             <div class="d-flex justify-content-between mb-2">
@@ -259,13 +251,6 @@
 
                             <hr>
 
-                            <!-- Item -->
-                            <div class="">
-                                <b class="text-muted">Traits</b>
-                                <div class="pl-3 text-pre traits"></div>
-                            </div>
-
-                            <hr>
 
                             <!-- Item -->
                             <div class="">
